[package]
name = "frunze_api"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
bson = "0.8.0"
clippy = {version = "0.0.137", optional = true}
docopt = { git = "https://github.com/docopt/docopt.rs" }
env_logger = "0.4.3"
error-chain = "0.10.0"
iron = "0.5.1"
log = "0.3.8"
mount = "0.3.0"
mongodb = "0.3.0"
router = "0.5.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
unicase = "1.4.0"
uuid = { version = "0.5.0", features = ["v4"] }

[dev-dependencies]
stainless = "0.1.11"
rustfmt = "0.8.4"

[features]
default = []
