[package]
name = "frunze_api"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
bson = "0.9.0"
clippy = {version = "0.0.140", optional = true}
docopt = "0.8.1"
env_logger = "0.4.3"
error-chain = "0.10.0"
iron = "0.5.1"
log = "0.3.8"
mount = "0.3.0"
mongodb = "0.3.1"
router = "0.5.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
unicase = "1.4.2"
uuid = { version = "0.5.0", features = ["v4"] }

[dev-dependencies]
stainless = "0.1.11"
rustfmt = "0.9.0"

[features]
default = []
